fix ps schema terminology for formation
